<?xml version="1.0"?>
<package format="2">
  <name>pointcloud2_segments_viz_2</name>
  <version>1.1.0</version>
  <description>The pointcloud2_segments_viz_2 package</description>

  <author email="matina961@hotmail.com">Stathogiannakou Matina</author>

  <maintainer email="matina961@hotmail.com">Stathogiannakou Matina</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>pointcloud_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
